--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
 #upper{
     margin-top: 12px;
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
     margin-bottom: 30px;
 
 }
@@ -27,6 +27,7 @@
     border: 1px solid rgb(13, 19, 33);
     border-radius: 8px;
     opacity: 0.8;
+    cursor: pointer;
 
 }
 /* hero content starts here */
@@ -97,3 +98,114 @@
 
 }
 /* hero content ends here */
+/* why web dev starts here */
+#why-web-dev{
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 200px auto;
+    
+}
+#why-web-dev .web-content{
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    padding: 10px;
+    
+}
+#why-web-dev .web-content h3{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 26px;
+    font-weight: 800;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+#why-web-dev .web-content p{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7    ;
+}
+/* why web dev ends here */
+/* pics and quotes starts here */
+#picsandworks{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+#picsandworks .contents{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    
+}
+#picsandworks .contents .main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 850px; /* Adjust the max-width as needed */
+    width: 100%;
+    gap: 10px;
+}
+#picsandworks .description{
+    max-width: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+#picsandworks .title{
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+#picsandworks .sub{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0%;
+    text-align: left;
+    opacity: 0.7;
+}
+#picsandworks .button button{
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0%;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+#picsandworks .descriptiontwo{
+    
+    display: flex;
+    gap: 20px;
+}
+/* pics and quotes ends here */
