--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,7 +160,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 850px; /* Adjust the max-width as needed */
+    max-width: 850px; 
     width: 100%;
     gap: 10px;
 }
@@ -258,3 +258,101 @@
 }
 
 /* inspiration ends here */
+/* my targets starts here */
+#target{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+#target .targets{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+#target .targets .current-target{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.target-title{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 25px;
+    font-weight: 800;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.target-subtitle{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 10px;
+}
+.card-boxs{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 850px; 
+    width: 100%;
+    gap: 10px;
+}
+.card-boxs .card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.card .img{
+    margin-bottom: 10px;
+}
+.card .img img{
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+.card .img-title{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 10px;
+}
+.card .img-subtitle{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 10px;
+    opacity: 0.7;
+}
+.card .link a{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+}
+/* my targets starts here */
