--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,7 +258,7 @@
 }
 
 /* inspiration ends here */
-/* my targets starts here */
+/* my current targets starts here */
 #target{
     display: flex;
     flex-direction: column;
@@ -309,12 +309,32 @@
     width: 100%;
     gap: 10px;
 }
-.card-boxs .card{
+.card-boxs .card1{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+}
+.card-boxs .card2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+}
+.card-boxs .card3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
 }
 .card .img{
     margin-bottom: 10px;
@@ -324,7 +344,7 @@
     height: 50px;
     margin-bottom: 10px;
 }
-.card .img-title{
+.img-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
     font-size: 18px;
@@ -334,7 +354,7 @@
     text-align: left;
     margin-bottom: 10px;
 }
-.card .img-subtitle{
+.img-subtitle{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
     font-size: 12px;
@@ -345,7 +365,7 @@
     margin-bottom: 10px;
     opacity: 0.7;
 }
-.card .link a{
+.link a{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
     font-size: 12px;
@@ -355,4 +375,56 @@
     text-align: left;
     text-decoration-line: underline;
 }
-/* my targets starts here */
+/* my current targets ends here */
+/* my next targets starts here */
+#target .targets .next-targets{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+#target .targets .next-targets .next-cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+#target .targets .next-targets .next-cards .next-card{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 850px; 
+    width: 100%;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.next-card .img img{
+    width: 84px;
+    height: auto;
+}
+.ne-target-title{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 25px;
+    font-weight: 800;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.ne-target-subtitle{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 10px;
+}
+/* my next targets ends here */
+/* support starts here */
+/* support ends here */
