--- a/styles/styles.css
+++ b/styles/styles.css
@@ -427,4 +427,77 @@
 }
 /* my next targets ends here */
 /* support starts here */
+#support{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 1015px;
+    height: 280px;
+}
+#support .support-me{
+    width: 1015px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    border-radius: 16px;
+    background:linear-gradient( rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url(../assets/handshake.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.support-me .support-title{
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.support-me .support-subtitle{
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 20px;
+}
+.support-me input[type="text"]{
+    position: static;
+    width: 487px;
+    height: 40px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);color: rgba(13, 19, 33, 0.4);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.support-me input[type="submit"]{
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    position: static;
+    width: 100px;
+    height: 40px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0%;
+    text-align: center;
+    cursor: pointer;
+}
 /* support ends here */
